@@ -94,11 +94,18 @@ sub default_config {
     return "TARGETDIR=".$t->TARGET."\nFILELAYOUT=".$t->PREFIX."-\%s";
 }
 
-sub prepend_lsof_warning {
+sub handle_lsof_warnings {
     my $t = shift;
     my $wanted = shift || '';
 
-    unless (which('lsof')) {
+    if (which('lsof')) {
+        my $trailing_newline = $wanted =~ /\n\z/;
+        $wanted = join("\n", grep {
+                         !m{lsof: WARNING: can't stat\(\) \w* file system} and
+                         !m{Output information may be incomplete}
+                     } split("\n", $wanted));
+        $wanted .= "\n" if $trailing_newline;
+    } else {
         $wanted = "WARNING: lsof not found, not checking for files in use.\n".$wanted;
     }
 
@@ -223,7 +230,7 @@ sub eq_or_diff_stderr {
 
 sub eq_lsof_warning_or_diff_stderr {
     my $t = shift;
-    $t->eq_or_diff_stderr($t->prepend_lsof_warning);
+    $t->eq_or_diff_stderr($t->handle_lsof_warnings);
 }
 
 sub eq_or_diff_stdout {
